[gd_scene load_steps=11 format=3 uid="uid://dpswo7nhpp30p"]

[ext_resource type="Theme" uid="uid://evv5alve252b" path="res://main/theme/theme.tres" id="1_rs2m4"]
[ext_resource type="PackedScene" uid="uid://bdir8ibmp15l2" path="res://main/world/ui/flicker/flicker.tscn" id="2_3c070"]
[ext_resource type="Script" path="res://main/world/ui/pause_menu/pause_menu.gd" id="2_qvlpx"]
[ext_resource type="PackedScene" uid="uid://cb507pxkyk0xm" path="res://main/world/ui/pause_menu/party_member_panel/party_member_panel.tscn" id="3_iq85w"]
[ext_resource type="PackedScene" uid="uid://ck1yu543qt4gw" path="res://main/world/ui/pause_menu/item_submenu/item_submenu.tscn" id="5_e5v21"]
[ext_resource type="Shader" path="res://main/transition/screen_blocky_fade.gdshader" id="5_xg6n8"]
[ext_resource type="AudioStream" uid="uid://b52h2qinfu6iw" path="res://main/theme/sound/cancel.tres" id="7_qkfc3"]
[ext_resource type="AudioStream" uid="uid://c4md8ks1818q6" path="res://main/theme/sound/accept.tres" id="8_erf2o"]
[ext_resource type="AudioStream" uid="uid://dv1ag3s4up115" path="res://main/theme/sound/select.tres" id="9_r58b2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jjrhp"]
shader = ExtResource("5_xg6n8")
shader_parameter/fade = 0.39
shader_parameter/tiling = 9.0

[node name="PauseMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rs2m4")
script = ExtResource("2_qvlpx")
party_member_panel_scene = ExtResource("3_iq85w")
default_color = Color(0.588235, 0.588235, 0.588235, 1)
select_color = Color(1, 1, 1, 1)

[node name="MainPanel" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="FlickerContainer" type="VBoxContainer" parent="MainPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2

[node name="Flicker" parent="MainPanel/HBoxContainer/FlickerContainer" instance=ExtResource("2_3c070")]
layout_mode = 2

[node name="Flicker2" parent="MainPanel/HBoxContainer/FlickerContainer" instance=ExtResource("2_3c070")]
layout_mode = 2

[node name="Flicker3" parent="MainPanel/HBoxContainer/FlickerContainer" instance=ExtResource("2_3c070")]
layout_mode = 2

[node name="Flicker4" parent="MainPanel/HBoxContainer/FlickerContainer" instance=ExtResource("2_3c070")]
layout_mode = 2

[node name="ChoiceContainer" type="VBoxContainer" parent="MainPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="Party" type="Label" parent="MainPanel/HBoxContainer/ChoiceContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
text = "status"

[node name="Swap" type="Label" parent="MainPanel/HBoxContainer/ChoiceContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
text = "swap"

[node name="Stuff" type="Label" parent="MainPanel/HBoxContainer/ChoiceContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
text = "stuff"

[node name="Config" type="Label" parent="MainPanel/HBoxContainer/ChoiceContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
text = "config"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
horizontal_scroll_mode = 0

[node name="PartyContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 1

[node name="PartyMemberPanel" parent="ScrollContainer/PartyContainer" instance=ExtResource("3_iq85w")]
layout_mode = 2

[node name="PartyMemberPanel2" parent="ScrollContainer/PartyContainer" instance=ExtResource("3_iq85w")]
layout_mode = 2

[node name="PartyMemberPanel3" parent="ScrollContainer/PartyContainer" instance=ExtResource("3_iq85w")]
layout_mode = 2

[node name="PartyMemberPanel4" parent="ScrollContainer/PartyContainer" instance=ExtResource("3_iq85w")]
layout_mode = 2

[node name="PartyMemberPanel5" parent="ScrollContainer/PartyContainer" instance=ExtResource("3_iq85w")]
layout_mode = 2

[node name="ItemSubmenuCanvasGroup" type="CanvasGroup" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_jjrhp")

[node name="ItemSubmenu" parent="ItemSubmenuCanvasGroup" instance=ExtResource("5_e5v21")]
unique_name_in_owner = true
offset_right = 64.0
offset_bottom = 64.0

[node name="StatusSubmenuCanvasGroup" type="CanvasGroup" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_jjrhp")

[node name="CancelPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_qkfc3")
bus = &"UI Sound Effect"

[node name="AcceptPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_erf2o")
bus = &"UI Sound Effect"

[node name="SelectPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_r58b2")
bus = &"UI Sound Effect"
